Anonymous | Login | 2021-01-16 23:58 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] | [ Issue History ] [ Print ] | ||||||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||||||
0024909 | Community | [OCCT] OCCT:Modeling Algorithms | public | 2014-05-08 13:43 | 2020-09-14 22:56 | ||||||||
Reporter | shoogen | ||||||||||||
Assigned To | ifv | ||||||||||||
Priority | normal | Severity | crash | ||||||||||
Status | new | Resolution | open | ||||||||||
Platform | Linux 64-bit | OS | Debian | OS Version | 7.4 | ||||||||
Product Version | |||||||||||||
Target Version | [OCCT] 7.6.0* | Fixed in Version | |||||||||||
Summary | 0024909: SIGSEGV in buildsweep | ||||||||||||
Description | Some sweeps cause segmentation faults. The original problem is described http://www.freecadweb.org/tracker/view.php?id=1419 [^] . version tested 73192b374 | ||||||||||||
Steps To Reproduce | source sweep3.draw | ||||||||||||
Tags | No tags attached. | ||||||||||||
Test case number | bugs modalg_7 bug24909_1, bug24909_2, bug24909_3 | ||||||||||||
Attached Files | ![]() ![]() ![]() ![]() ![]() ![]() ![]() | ||||||||||||
![]() |
||||||
|
![]() |
|
(0029255) shoogen (reporter) 2014-05-08 13:53 |
if either of the sections is omitted the sweep returns a result. |
(0029262) shoogen (reporter) 2014-05-08 18:08 |
the following script reproduces the problem without relying on external BREPs pload ALL circle c1 0 0 0 40 mkedge e1 c1 wire w1 e1 tcopy w1 Sketch002 tcopy w1 Sketch001 renamevar w1 Sketch trotate Sketch 0 0 0 0. 1. 0. 90 ttranslate Sketch 0. 0. 75. trotate Sketch001 0 0 0 0. 1. 0. 90 ttranslate Sketch001 0. 0. -75. ttranslate Sketch002 50. 0. 0. mksweep Sketch002 setsweep -CF addsweep Sketch001 addsweep Sketch buildsweep Sweep #An exception was caught 0x7f61f1538031 : OSD_SIGSEGV: SIGSEGV 'segmentation violation' detected. Address 10 #** Exception ** 0x7f61f1538031 : OSD_SIGSEGV: SIGSEGV 'segmentation violation' detected. Address 10 |
(0033302) shoogen (reporter) 2014-10-18 19:28 |
#additional example for test case creation #generated by FreeCAD 0.15.4119 +12 (Git) pload MODELING #saved shape of Part::Part2DObjectPython::Draft._BezCurve Object restore minihyd-draw-BezCurve.brep BezCurve ttranslate BezCurve 0 -8 0 explode BezCurve E wire Sweep001-0-spine BezCurve_1 mksweep Sweep001-0-spine setsweep -CF circle Circle-curve 0 0 0 18 mkedge Circle-edge Circle-curve 0 0 wire Circle Circle-edge trotate Circle 0 0 0 0.577350269189625731 0.577350269189625731 0.577350269189625731 120 ttranslate Circle 0 -71 203.5 addsweep Circle circle Circle001-curve 0 0 0 16 mkedge Circle001-edge Circle001-curve 0 0 wire Circle001 Circle001-edge trotate Circle001 0 0 0 0.577350269189625731 0.577350269189625731 0.577350269189625731 120 ttranslate Circle001 0 -71 203.5 addsweep Circle001 buildsweep Sweep001 -C -S donly Sweep001 #SIGSEGV, Segmentation fault. #0x00007fff8aab9559 in GeomFill_Array1OfSectionLaw::Value (this=0x10, Index=1) # at occt-eb46b12/inc/TCollection_Array1.lxx:119 #119 Standard_OutOfRange_Raise_if((Index < myLowerBound || Index > myUpperBound),NULL); |
(0034897) shoogen (reporter) 2014-12-01 23:28 edited on: 2014-12-01 23:39 |
The test case sweep3.draw seems to be affected by 0025453 it does not longer create a sigsegv but a faulty shape > checkshape Sweep On Shape faulty_1 : BRepCheck_UnorientableShape Shape faulty_2 on shape faulty_1 : BRepCheck_BadOrientationOfSubshape On Shape faulty_3 : BRepCheck_UnorientableShape Shape faulty_4 on shape faulty_3 : BRepCheck_BadOrientationOfSubshape Faulty shapes in variables faulty_1 to faulty_4 But the other two examples (minihyd and from c29262) still create a SIGSEGV |
(0036177) shoogen (reporter) 2015-01-17 19:04 edited on: 2015-01-17 19:05 |
I got a new user report that generates a similar stacktrace. (DRAWEXE example included in sweep-arc2.zip) |
(0038725) shoogen (reporter) 2015-03-20 12:54 |
I got a new user report that generates a similar stacktrace. (DRAWEXE example included in sweep-negpara1.zip) it involves an ellipse with negative parameter range: "mkedge Ellipse-edge Ellipse-curve 3.141592653589793 0" Program received signal SIGSEGV, Segmentation fault. 0x00007f97c7135eb1 in GeomFill_Array1OfSectionLaw::Value (this=0x10, Index=1) at occt/inc/TCollection_Array1.lxx:119 119 Standard_OutOfRange_Raise_if((Index < myLowerBound || Index > myUpperBound),NULL); |
(0069017) apv (tester) 2017-08-01 13:24 |
Problem described in issue is reproduced on current state of OCCT. |
![]() |
|||
Date Modified | Username | Field | Change |
2014-05-08 13:43 | shoogen | New Issue | |
2014-05-08 13:43 | shoogen | Assigned To | => ifv |
2014-05-08 13:43 | shoogen | File Added: sweep3.draw | |
2014-05-08 13:44 | shoogen | File Added: sweep3-draw-Sweep-0-spine.brep | |
2014-05-08 13:45 | shoogen | File Added: sweep3-draw-Sweep-0-section-00-Sketch.brep | |
2014-05-08 13:45 | shoogen | File Added: sweep3-draw-Sweep-0-section-01-Sketch001.brep | |
2014-05-08 13:53 | shoogen | Note Added: 0029255 | |
2014-05-08 18:08 | shoogen | Note Added: 0029262 | |
2014-05-22 06:49 | abv | Relationship added | has duplicate 0024906 |
2014-09-12 14:16 | abv | Target Version | => 7.1.0 |
2014-10-18 19:23 | shoogen | File Added: minihyd.zip | |
2014-10-18 19:28 | shoogen | Note Added: 0033302 | |
2014-12-01 23:28 | shoogen | Note Added: 0034897 | |
2014-12-01 23:34 | shoogen | Note Edited: 0034897 | View Revisions |
2014-12-01 23:36 | shoogen | Note Edited: 0034897 | View Revisions |
2014-12-01 23:39 | shoogen | Note Edited: 0034897 | View Revisions |
2015-01-17 19:04 | shoogen | Note Added: 0036177 | |
2015-01-17 19:04 | shoogen | File Added: sweep-arc2.zip | |
2015-01-17 19:05 | shoogen | Note Edited: 0036177 | View Revisions |
2015-03-20 12:50 | shoogen | File Added: sweep-negpara1.zip | |
2015-03-20 12:54 | shoogen | Note Added: 0038725 | |
2016-10-28 11:54 | msv | Target Version | 7.1.0 => 7.2.0 |
2017-07-21 11:34 | msv | Target Version | 7.2.0 => 7.3.0 |
2017-08-01 13:24 | apv | Test case number | => bugs modalg_7 bug24909_1, bug24909_2, bug24909_3 |
2017-08-01 13:24 | apv | Note Added: 0069017 | |
2017-12-05 17:01 | msv | Target Version | 7.3.0 => 7.4.0 |
2019-08-12 16:37 | msv | Target Version | 7.4.0 => 7.5.0 |
2020-09-14 22:56 | msv | Target Version | 7.5.0 => 7.6.0* |
Copyright © 2000 - 2021 MantisBT Team |