0024909: Modeling Algorithms - SIGSEGV in buildsweep

Change NCollection_DataMap NCollection_IndexedDataMap to avoid undefined behavior in BRepFill_CompatibleWires::SameNumberByPolarMethod()

Correction in BRepFill_PipeShell::Prepare()